--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: install packages
-      run: pip install -r requirements.txt
-    - run: make test
+    - uses: actions/checkout@v3
+    - name: Install build dependencies
+      run: sudo apt-get install -y build-essential gcc
+    - name: Install packages
+      run: make install
